--- a/src/main/webapp/jasper/myqr.jrxml
+++ b/src/main/webapp/jasper/myqr.jrxml
@@ -8,7 +8,7 @@
 	</queryString>
 	<field name="number" class="java.lang.String"/>
 	<background>
-		<band splitType="Stretch"/>
+		<band height="17" splitType="Stretch"/>
 	</background>
 	<pageHeader>
 		<band height="115" splitType="Stretch">
@@ -25,7 +25,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Century" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[NATIONAL SCIENCE AND TECHNOLOGY WEEK-REGIONAL CELEBRATION]]></text>
+				<text><![CDATA[2019 NATIONAL SCIENCE AND TECHNOLOGY WEEK-REGIONAL CELEBRATION]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="-4" y="25" width="565" height="45" uuid="ca6bb5e7-6a39-4c64-bfc1-1c7a0282e41e"/>
@@ -36,10 +36,20 @@
 SM City Gensan
 General Santos City]]></text>
 			</staticText>
+			<image>
+				<reportElement x="37" y="10" width="60" height="66" uuid="113438a2-52a0-4e37-b919-8db2c4e029b4"/>
+				<imageExpression><![CDATA[$P{dost}]]></imageExpression>
+			</image>
+			<componentElement>
+				<reportElement x="400" y="50" width="160" height="65" uuid="2f5d63a8-1c0c-4761-9312-1fd87e3cf614"/>
+				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128" drawText="false" checksumRequired="false">
+					<jr:codeExpression><![CDATA[$F{number}]]></jr:codeExpression>
+				</jr:barbecue>
+			</componentElement>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="627" splitType="Stretch">
+		<band height="637" splitType="Stretch">
 			<staticText>
 				<reportElement x="5" y="90" width="100" height="30" uuid="f6e6ede8-7b6d-4eb4-b18e-d8e13ca0fe38"/>
 				<textElement verticalAlignment="Middle">
@@ -52,14 +62,14 @@ General Santos City]]></text>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Century"/>
 				</textElement>
-				<text><![CDATA[MIDDLE INITIAL]]></text>
+				<text><![CDATA[MIDDLE NAME]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="5" y="150" width="100" height="30" uuid="0a3a741d-5a68-42a1-9c0b-1cf438620587"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Century"/>
 				</textElement>
-				<text><![CDATA[COMPANY]]></text>
+				<text><![CDATA[COMPANY/OFFICE]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="5" y="180" width="100" height="30" uuid="497f7d92-7ef9-45a8-9275-28aa2b3c72f1"/>
@@ -516,24 +526,24 @@ General Santos City]]></text>
 				<reportElement x="456" y="378" width="62" height="1" uuid="3d6ae800-2021-42a7-86f0-409806a71ad0"/>
 			</line>
 			<line>
-				<reportElement x="18" y="419" width="155" height="1" uuid="c2af31d5-6f9d-4c9b-ae18-079424ff5c70"/>
+				<reportElement x="374" y="420" width="155" height="1" uuid="c2af31d5-6f9d-4c9b-ae18-079424ff5c70"/>
 			</line>
 			<staticText>
-				<reportElement x="37" y="420" width="100" height="18" uuid="d00152ef-545b-4ce4-831e-ef2702852900"/>
+				<reportElement x="403" y="420" width="100" height="18" uuid="d00152ef-545b-4ce4-831e-ef2702852900"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Century"/>
 				</textElement>
 				<text><![CDATA[Name & Signature]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="83" y="450" width="386" height="55" uuid="8eac04e7-b422-4fc2-a43a-1b2097988b78"/>
+				<reportElement x="120" y="457" width="343" height="35" uuid="8eac04e7-b422-4fc2-a43a-1b2097988b78"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Century" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[NATIONAL SCIENCE AND TECHNOLOGY WEEK-REGIONAL CELEBRATION]]></text>
+				<text><![CDATA[2019 NATIONAL SCIENCE AND TECHNOLOGY WEEK-REGIONAL CELEBRATION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="-4" y="500" width="565" height="55" uuid="b32f55d8-8702-4295-859c-828936c44180"/>
+				<reportElement x="122" y="490" width="315" height="45" uuid="b32f55d8-8702-4295-859c-828936c44180"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Century" size="10"/>
 				</textElement>
@@ -542,14 +552,14 @@ SM City Gensan
 General Santos City]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="127" y="555" width="294" height="28" uuid="3d5a98cf-5fc4-42ec-8698-5f816843d49b"/>
+				<reportElement x="129" y="535" width="294" height="28" uuid="3d5a98cf-5fc4-42ec-8698-5f816843d49b"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Century" size="18"/>
 				</textElement>
 				<text><![CDATA[REGISTRATION FORM]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="-4" y="600" width="572" height="16" uuid="58955eab-9355-418e-9253-b94ee7289792"/>
+				<reportElement x="219" y="560" width="122" height="16" uuid="58955eab-9355-418e-9253-b94ee7289792"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{number}]]></textFieldExpression>
 			</textField>
@@ -557,22 +567,34 @@ General Santos City]]></text>
 				<reportElement x="-10" y="450" width="573" height="1" uuid="0ce4e791-bd2f-48b7-b13b-736cb2508a54"/>
 			</line>
 			<componentElement>
-				<reportElement x="184" y="580" width="170" height="30" uuid="9438227a-19bd-4bd6-9d22-06493c2d3f2e"/>
+				<reportElement x="395" y="587" width="167" height="50" uuid="9438227a-19bd-4bd6-9d22-06493c2d3f2e"/>
 				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128" drawText="false" checksumRequired="false">
 					<jr:codeExpression><![CDATA[$F{number}]]></jr:codeExpression>
 				</jr:barbecue>
 			</componentElement>
 			<textField>
-				<reportElement x="-4" y="40" width="563" height="16" uuid="66e7c2c5-d6dd-4f8d-8f2f-dd35896531c3"/>
+				<reportElement x="-1" y="24" width="563" height="16" uuid="66e7c2c5-d6dd-4f8d-8f2f-dd35896531c3"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{number}]]></textFieldExpression>
 			</textField>
-			<componentElement>
-				<reportElement x="191" y="10" width="170" height="30" uuid="2f5d63a8-1c0c-4761-9312-1fd87e3cf614"/>
-				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128" drawText="false" checksumRequired="false">
-					<jr:codeExpression><![CDATA[$F{number}]]></jr:codeExpression>
-				</jr:barbecue>
-			</componentElement>
+			<staticText>
+				<reportElement x="127" y="35" width="311" height="30" uuid="beff97a1-47f3-42e6-9ff2-04d5c23226d6"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Century" isBold="true"/>
+				</textElement>
+				<text><![CDATA[PLS. WRITE LEGIBLY (PAKISULAT PO NG MAAYOS)]]></text>
+			</staticText>
+			<image>
+				<reportElement x="40" y="470" width="60" height="66" uuid="9873a67d-1a2f-45f9-a8cf-bf7633e1aca7"/>
+				<imageExpression><![CDATA[$P{dost}]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="4" y="576" width="332" height="61" uuid="13d37f07-d363-446c-b59f-d74a573dbad5"/>
+				<textElement>
+					<font fontName="Century" isBold="true"/>
+				</textElement>
+				<text><![CDATA[REMINDER: PLS. KEEP THIS STUB FOR REGISTRATION from December 3-5, 2019 (PAKITAGO PO ANG STUB NA ITO PARA PO SA REGISTRATION SIMULA DECEMBER 3-5, 2019)]]></text>
+			</staticText>
 		</band>
 	</detail>
 </jasperReport>
